# passwand

./: .cirrus.yml  .hgignore  .travis.yml  CMakeLists.txt  README.md  README.rst  pw
.github/workflows/: ci.yml
cli/: CMakeLists.txt  change-main.c  change-main.h  change-master.c  change-master.h  check.c  check.h  cli.h  delete.c  delete.h  generate.c  generate.h  get.c  get.h  help.c  help.h  list.c  list.h  main.c  print.c  print.h  set.c  set.h  update.c  update.h
common/: argparse.c  argparse.h  environ.h  getenv.h  passwand.1  privilege-fallback.c  privilege-macos.c  privilege.h  streq.h
exe/: argparse.c  argparse.h  cli.c  gtk.c  gui.c  gui.h  osascript.c
gui/: CMakeLists.txt  gtk.c  gtk.h  gui.h  main.c  osascript.c  test-type.c  test-wayland.c  wayland.c  x11.c
include/passwand/: passwand.h
passwand/: Browser.py  Dialogs.py  Encoding.py  Encryption.py  Entry.py  SendKeys.py  Tests.py  __init__.py
scrypt/: Makefile.am.patch
src/: CMakeLists.txt  auto.h  constants.h  encoding.c  encoding.h  encryption.c  encryption.h  endian.c  endian.h  entry.c  erase.c  error.c  export.c  hmac.c  import.c  internal.h  make_key.c  malloc.c  pack.c  random.c  random.h  read.c  types.h
tests/: CMakeLists.txt  aprintf.c  cleanup.c  gui-test-stub.c  integration-tests.py  main.c  mkpath.c  test.h  test_decode.c  test_decrypt.c  test_encode.c  test_encrypt.c  test_entry_check_mac.c  test_entry_new.c  test_entry_set_mac.c  test_erase.c  test_export.c  test_import.c  test_integration.c  test_malloc.c  test_pack.c  test_random_bytes.c  test_unpack.c  util.c  util.h
